--- a/publication-web-resources/html/publication.html
+++ b/publication-web-resources/html/publication.html
@@ -6,16 +6,14 @@
 		<link href="../css/idGeneratedStyles.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body id="publication" style="width:800px;height:400px;background-color:white;">
-		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogram-AJH-Directie.aspx">
-			<div id="_idContainer000" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
-				<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
-					<p class="base ParaOverride-1"><span id="_idTextSpan000" class="CharOverride-1" style="position:absolute;top:23.32px;left:47.55px;letter-spacing:-0.09px;">Leidend </span><span id="_idTextSpan001" class="CharOverride-1" style="position:absolute;top:23.32px;left:93.48px;letter-spacing:-0.08px;">ambtenaar</span></p>
-					<p class="naam ParaOverride-1"><span id="_idTextSpan002" class="CharOverride-2" style="position:absolute;top:41.02px;left:51.63px;letter-spacing:0.18px;">Bob </span><span id="_idTextSpan003" class="CharOverride-2" style="position:absolute;top:41.02px;left:73.68px;letter-spacing:0.09px;">Van </span><span id="_idTextSpan004" class="CharOverride-2" style="position:absolute;top:41.02px;left:94.81px;letter-spacing:0.17px;">den </span><span id="_idTextSpan005" class="CharOverride-2" style="position:absolute;top:41.02px;left:116.07px;letter-spacing:0.15px;">Broeck</span></p>
-				</div>
+		<div id="_idContainer000" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
+			<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
+				<p class="base ParaOverride-1"><span id="_idTextSpan000" class="CharOverride-1" style="position:absolute;top:23.32px;left:47.55px;letter-spacing:-0.09px;">Leidend </span><span id="_idTextSpan001" class="CharOverride-1" style="position:absolute;top:23.32px;left:93.48px;letter-spacing:-0.08px;">ambtenaar</span></p>
+				<p class="naam ParaOverride-1"><span id="_idTextSpan002" class="CharOverride-2" style="position:absolute;top:41.02px;left:51.63px;letter-spacing:0.18px;">Bob </span><span id="_idTextSpan003" class="CharOverride-2" style="position:absolute;top:41.02px;left:73.68px;letter-spacing:0.09px;">Van </span><span id="_idTextSpan004" class="CharOverride-2" style="position:absolute;top:41.02px;left:94.81px;letter-spacing:0.17px;">den </span><span id="_idTextSpan005" class="CharOverride-2" style="position:absolute;top:41.02px;left:116.07px;letter-spacing:0.15px;">Broeck</span></p>
 			</div>
-		</a>
+		</div>
 		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogram-AJH-Directie.aspx">
-			<div id="_idContainer001" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+			<div id="_idContainer001" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 				<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
 					<p class="base ParaOverride-1"><span id="_idTextSpan006" class="CharOverride-1" style="position:absolute;top:23.32px;left:69.81px;letter-spacing:-0.09px;">Staf </span><span id="_idTextSpan007" class="CharOverride-1" style="position:absolute;top:23.32px;left:94px;letter-spacing:-0.04px;">van </span><span id="_idTextSpan008" class="CharOverride-1" style="position:absolute;top:23.32px;left:117.13px;letter-spacing:-0.02px;">de </span></p>
 					<p class="base ParaOverride-1"><span id="_idTextSpan009" class="CharOverride-1" style="position:absolute;top:39.32px;left:35.35px;letter-spacing:-0.14px;">administrateur-generaal</span></p>
@@ -23,7 +21,7 @@
 			</div>
 		</a>
 		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogrammen-AJH--Justitiehuizen.aspx">
-			<div id="_idContainer002" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+			<div id="_idContainer002" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 				<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
 					<p class="base ParaOverride-1"><span id="_idTextSpan010" class="CharOverride-1" style="position:absolute;top:23.32px;left:38.1px;letter-spacing:-0.14px;">Justitiehuizen</span></p>
 					<p class="naam ParaOverride-1"><span id="_idTextSpan011" class="CharOverride-2" style="position:absolute;top:41.02px;left:36.57px;letter-spacing:0.14px;">Hans </span><span id="_idTextSpan012" class="CharOverride-2" style="position:absolute;top:41.02px;left:63.43px;letter-spacing:0.13px;">Dominicus</span></p>
@@ -31,15 +29,15 @@
 			</div>
 		</a>
 		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogrammen-AJH--Staf-en-Co%C3%B6rdinatie.aspx">
-			<div id="_idContainer003" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+			<div id="_idContainer003" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 				<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
 					<p class="base ParaOverride-1"><span id="_idTextSpan013" class="CharOverride-1" style="position:absolute;top:23.32px;left:48.36px;letter-spacing:-0.09px;">Staf </span><span id="_idTextSpan014" class="CharOverride-1" style="position:absolute;top:23.32px;left:72.55px;letter-spacing:0px;">en </span><span id="_idTextSpan015" class="CharOverride-1" style="position:absolute;top:23.32px;left:89.22px;letter-spacing:-0.14px;">Coördinatie</span></p>
 					<p class="naam ParaOverride-1"><span id="_idTextSpan016" class="CharOverride-2" style="position:absolute;top:41.02px;left:60.26px;letter-spacing:0.18px;">Katrien </span><span id="_idTextSpan017" class="CharOverride-2" style="position:absolute;top:41.02px;left:97.97px;letter-spacing:0.22px;">Mostaert</span></p>
 				</div>
 			</div>
 		</a>
-		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogrammen-AJH--Staf-en-Co%C3%B6rdinatie.aspx">
-			<div id="_idContainer004" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogrammen-AJH--Beleid.aspx">
+			<div id="_idContainer004" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 				<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
 					<p class="base ParaOverride-1"><span id="_idTextSpan018" class="CharOverride-1" style="position:absolute;top:23.32px;left:83.32px;letter-spacing:-0.04px;">Beleid</span></p>
 					<p class="naam ParaOverride-1"><span id="_idTextSpan019" class="CharOverride-2" style="position:absolute;top:41.02px;left:62.99px;letter-spacing:0.02px;">Tamara </span><span id="_idTextSpan020" class="CharOverride-2" style="position:absolute;top:41.02px;left:101.84px;letter-spacing:0.16px;">Küpper</span></p>
@@ -47,7 +45,7 @@
 			</div>
 		</a>
 		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogrammen-AJH--VCET.aspx">
-			<div id="_idContainer005" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+			<div id="_idContainer005" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 				<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
 					<p class="base ParaOverride-1"><span id="_idTextSpan021" class="CharOverride-1" style="position:absolute;top:23.32px;left:60.91px;letter-spacing:-0.08px;">VCET</span></p>
 					<p class="naam ParaOverride-1"><span id="_idTextSpan022" class="CharOverride-2" style="position:absolute;top:41.02px;left:43.92px;letter-spacing:0.2px;">Jef </span><span id="_idTextSpan023" class="CharOverride-2" style="position:absolute;top:41.02px;left:60.05px;letter-spacing:0.13px;">Verlinden</span></p>
@@ -55,7 +53,7 @@
 			</div>
 		</a>
 		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogrammen-AJH--Hulp--en-Dienstverlening-aan-gedetineerden.aspx">
-			<div id="_idContainer006" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+			<div id="_idContainer006" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 				<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
 					<p class="base ParaOverride-1"><span id="_idTextSpan024" class="CharOverride-1" style="position:absolute;top:8.32px;left:51.67px;letter-spacing:-0.01px;">Hulp- </span><span id="_idTextSpan025" class="CharOverride-1" style="position:absolute;top:8.32px;left:84.15px;letter-spacing:0px;">en </span></p>
 					<p class="base ParaOverride-1"><span id="_idTextSpan026" class="CharOverride-1" style="position:absolute;top:22.32px;left:21.46px;letter-spacing:-0.1px;">Dienstverlening </span><span id="_idTextSpan027" class="CharOverride-1" style="position:absolute;top:22.32px;left:108.52px;letter-spacing:-0.02px;">aan</span></p>
@@ -65,44 +63,43 @@
 			</div>
 		</a>
 		<a target="_blank" href="https://vlaamseoverheid.sharepoint.com/sites/jeanne/SitePages/Organogrammen-AJH--Gendergerelateerd-geweld.aspx">
-			<div id="_idContainer007" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+			<div id="_idContainer007" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 				<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
 					<p class="base ParaOverride-1"><span id="_idTextSpan031" class="CharOverride-1" style="position:absolute;top:23.32px;left:3.08px;letter-spacing:-0.07px;">Gendergerelateerd </span><span id="_idTextSpan032" class="CharOverride-1" style="position:absolute;top:23.32px;left:106.06px;letter-spacing:-0.05px;">Geweld</span></p>
 					<p class="naam ParaOverride-1"><span id="_idTextSpan033" class="CharOverride-2" style="position:absolute;top:41.02px;left:32.95px;letter-spacing:0.13px;">Lilith </span><span id="_idTextSpan034" class="CharOverride-2" style="position:absolute;top:41.02px;left:60.2px;letter-spacing:0.18px;">Roggemans</span></p>
 				</div>
 			</div>
 		</a>
-		<div id="_idContainer008" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer008" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<div style="width:0px;height:0px;position:absolute;top:0px;left:0px;-webkit-transform-origin: 0% 0%; -webkit-transform: translate(0px,1px) rotate(0deg) scale(1);transform-origin: 0% 0%; transform: translate(0px,1px) rotate(0deg) scale(1);">
-				<p class="base ParaOverride-1"><span id="_idTextSpan035" class="CharOverride-1" style="position:absolute;top:23.32px;left:18.75px;letter-spacing:-0.06px;">Vlaamse </span><span id="_idTextSpan036" class="CharOverride-1" style="position:absolute;top:23.32px;left:67.01px;letter-spacing:-0.14px;">Handhaving</span></p>
-				<p class="naam ParaOverride-1"><span id="_idTextSpan037" class="CharOverride-2" style="position:absolute;top:41.02px;left:35.81px;letter-spacing:0.22px;">Hubert </span><span id="_idTextSpan038" class="CharOverride-2" style="position:absolute;top:41.02px;left:72.56px;letter-spacing:0.21px;">Bloemen</span></p>
+				<p class="base ParaOverride-1"><span id="_idTextSpan035" class="CharOverride-1" style="position:absolute;top:31.32px;left:18.75px;letter-spacing:-0.06px;">Vlaamse </span><span id="_idTextSpan036" class="CharOverride-1" style="position:absolute;top:31.32px;left:67.01px;letter-spacing:-0.14px;">Handhaving</span></p>
 			</div>
 		</div>
-		<div id="_idContainer009" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer009" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAoCAYAAAA/tpB3AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAFElEQVQIW2OwM7P4z8TAwMAwtAkAZ5kB+jv4BoMAAAAASUVORK5CYII=" alt="" />
 		</div>
-		<div id="_idContainer010" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer010" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAChCAYAAAAGCdVnAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAGklEQVQoU2OwM7P4z8TAwMAwSowSowQ24iAANNgDrWmQFDIAAAAASUVORK5CYII=" alt="" />
 		</div>
-		<div id="_idContainer011" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer011" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAABCAYAAADXeS5fAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAEElEQVQIW2O0M7P4z0ABAABnnwGtEUoUBQAAAABJRU5ErkJggg==" alt="" />
 		</div>
-		<div id="_idContainer012" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer012" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAA2MAAAABCAYAAABT5XbFAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAIklEQVRIS+3BMQ0AMAgAsGFq4cI7ysAFV9uon/MAAAC41AuyBgJu0+dNQAAAAABJRU5ErkJggg==" alt="" />
 		</div>
-		<div id="_idContainer013" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer013" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAVCAYAAACHUoQEAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAFUlEQVQIW2OwM7P4z8TAwMBAW+IgALMzApWVoh9VAAAAAElFTkSuQmCC" alt="" />
 		</div>
-		<div id="_idContainer014" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer014" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAVCAYAAACHUoQEAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAFUlEQVQIW2OwM7P4z8TAwMBAW+IgALMzApWVoh9VAAAAAElFTkSuQmCC" alt="" />
 		</div>
-		<div id="_idContainer015" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer015" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAVCAYAAACHUoQEAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAFUlEQVQIW2OwM7P4z8TAwMBAW+IgALMzApWVoh9VAAAAAElFTkSuQmCC" alt="" />
 		</div>
-		<div id="_idContainer016" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer016" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAVCAYAAACHUoQEAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAFUlEQVQIW2OwM7P4z8TAwMBAW+IgALMzApWVoh9VAAAAAElFTkSuQmCC" alt="" />
 		</div>
-		<div id="_idContainer017" class="Basic-Graphics-Frame _idGenObjectStyle-Disabled">
+		<div id="_idContainer017" class="Basisafbeeldingskader _idGenObjectStyle-Disabled">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAVCAYAAACHUoQEAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAFUlEQVQIW2OwM7P4z8TAwMBAW+IgALMzApWVoh9VAAAAAElFTkSuQmCC" alt="" />
 		</div>
 	</body>
